--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -7,13 +7,18 @@
 
   <body>
     <div class="divClass">
-        <h1>Juan Manuel</h1>
+        <h1 style="color: red;">Juan Manuel</h1>
         <h3>Henry</h3>
         <h4>Tarea de HTML / CSS</h4>
     </div>
 
     <div class="divClass">
-        <span id="spanId">Mi comida favorita es pizza</span>
+        <span id="spanId" style="display: block;">Mi comida favorita es pizza</span>
+        <a href="https://es-la.facebook.com/people/LA-GRAN-POCHA/100063746970659/">Link a Resto comida favorita</a>
+    </div>
+
+    <div class="divClass"> 
+        <p style="display:none */visibity: hidden>Mi comida favorita es pizza</p>
         <a href="https://es-la.facebook.com/people/LA-GRAN-POCHA/100063746970659/">Link a Resto comida favorita</a>
     </div>
 
